--- a/flame-building-doodle-dash/step_02/pubspec.yaml
+++ b/flame-building-doodle-dash/step_02/pubspec.yaml
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.0.0 <4.0.0'
+  sdk: '>=3.0.2 <4.0.0'
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -35,8 +35,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  flame: ^1.7.3
-  google_fonts: ^4.0.4
+  flame: 1.7.3
+  google_fonts: ^4.0.5
 
 dev_dependencies:
   flutter_test:
