Update `firebase-get-to-know-flutter` codelab script

--- a/firebase-get-to-know-flutter/codelab_rebuild.yaml
+++ b/firebase-get-to-know-flutter/codelab_rebuild.yaml
@@ -15,7 +15,7 @@ steps:
           include: ../../analysis_options.yaml
       - name: Add dependencies.
         path: gtk_flutter
-        flutter: pub add google_fonts go_router
+        flutter: pub add google_fonts:'>=4.0.0 < 6.0.0' go_router
       - name: Patch pubspec.yaml
         path: gtk_flutter/pubspec.yaml
         patch-u: |
@@ -1871,25 +1871,25 @@ steps:
           +                  context.push(uri.toString());
           +                })),
           +                AuthStateChangeAction(((context, state) {
-          +                  if (state is SignedIn || state is UserCreated) {
-          +                    var user = (state is SignedIn)
-          +                        ? state.user
-          +                        : (state as UserCreated).credential.user;
-          +                    if (user == null) {
-          +                      return;
-          +                    }
-          +                    if (state is UserCreated) {
-          +                      user.updateDisplayName(user.email!.split('@')[0]);
-          +                    }
-          +                    if (!user.emailVerified) {
-          +                      user.sendEmailVerification();
-          +                      const snackBar = SnackBar(
-          +                          content: Text(
-          +                              'Please check your email to verify your email address'));
-          +                      ScaffoldMessenger.of(context).showSnackBar(snackBar);
-          +                    }
-          +                    context.pushReplacement('/');
+          +                  final user = switch (state) {
+          +                    SignedIn state => state.user,
+          +                    UserCreated state => state.credential.user,
+          +                    _ => null
+          +                  };
+          +                  if (user == null) {
+          +                    return;
           +                  }
+          +                  if (state is UserCreated) {
+          +                    user.updateDisplayName(user.email!.split('@')[0]);
+          +                  }
+          +                  if (!user.emailVerified) {
+          +                    user.sendEmailVerification();
+          +                    const snackBar = SnackBar(
+          +                        content: Text(
+          +                            'Please check your email to verify your email address'));
+          +                    ScaffoldMessenger.of(context).showSnackBar(snackBar);
+          +                  }
+          +                  context.pushReplacement('/');
           +                })),
           +              ],
           +            );
@@ -2663,7 +2663,7 @@ steps:
                      ),
                      const Divider(
                        height: 8,
-          @@ -42,14 +48,26 @@ class HomePage extends StatelessWidget {
+          @@ -42,14 +48,25 @@ class HomePage extends StatelessWidget {
                        color: Colors.grey,
                      ),
                      const Header("What we'll be doing"),
@@ -2678,12 +2678,11 @@ steps:
                        builder: (context, appState, _) => Column(
                          crossAxisAlignment: CrossAxisAlignment.start,
                          children: [
-          +                if (appState.attendees >= 2)
-          +                  Paragraph('${appState.attendees} people going')
-          +                else if (appState.attendees == 1)
-          +                  const Paragraph('1 person going')
-          +                else
-          +                  const Paragraph('No one going'),
+          +                switch (appState.attendees) {
+          +                  1 => const Paragraph('1 person going'),
+          +                  >= 2 => Paragraph('${appState.attendees} people going'),
+          +                  _ => const Paragraph('No one going'),
+          +                },
                            if (appState.loggedIn) ...[
           +                  YesNoSelection(
           +                    state: appState.attending,
