--- a/next-gen-ui/codelab_rebuild.yaml
+++ b/next-gen-ui/codelab_rebuild.yaml
@@ -1630,9 +1630,9 @@ steps:
           // Use of this source code is governed by a BSD-style license that can be
           // found in the LICENSE file.
           
-          import 'dart:io';
+          import 'dart:io' show Platform;
           
-          import 'package:flutter/foundation.dart';
+          import 'package:flutter/foundation.dart' show kIsWeb;
           import 'package:flutter/material.dart';
           import 'package:window_size/window_size.dart';
           
@@ -2428,9 +2428,9 @@ steps:
         patch-u: |
           --- b/next-gen-ui/step_04_a/lib/main.dart
           +++ a/next-gen-ui/step_04_a/lib/main.dart
-          @@ -6,6 +6,7 @@ import 'dart:io';
+          @@ -6,6 +6,7 @@ import 'dart:io' show Platform;
            
-           import 'package:flutter/foundation.dart';
+           import 'package:flutter/foundation.dart' show kIsWeb;
            import 'package:flutter/material.dart';
           +import 'package:flutter_animate/flutter_animate.dart';
            import 'package:window_size/window_size.dart';
@@ -2822,8 +2822,8 @@ steps:
         patch-u: |
           --- b/next-gen-ui/step_05_a/lib/main.dart
           +++ a/next-gen-ui/step_05_a/lib/main.dart
-          @@ -7,8 +7,10 @@ import 'dart:io';
-           import 'package:flutter/foundation.dart';
+          @@ -7,8 +7,10 @@ import 'dart:io' show Platform;
+           import 'package:flutter/foundation.dart' show kIsWeb;
            import 'package:flutter/material.dart';
            import 'package:flutter_animate/flutter_animate.dart';
           +import 'package:provider/provider.dart';
