--- a/tooling/claat_export_images/pubspec.yaml
+++ b/tooling/claat_export_images/pubspec.yaml
@@ -10,11 +10,12 @@ dependencies:
   args: ^2.4.2
   googleapis: ^11.2.0
   googleapis_auth: ^1.4.1
+  image: ^4.0.17
   json_annotation: ^4.8.1
+  path: ^1.8.3
 
 dev_dependencies:
   build_runner: ^2.4.5
   json_serializable: ^6.7.0
   lints: ^2.0.0
-  path: ^1.8.3
   test: ^1.21.0
